remove xvfb, fix loop, and refactor code

--- a/mohh-gps.service
+++ b/mohh-gps.service
@@ -2,10 +2,10 @@
 Description=Start MOHH GPS Instances
 
 [Service]
+KillMode=none
+Type=oneshot
 PassEnvironment=GPS_NAME GPS_PWD GPS_ADM_PWD GPS_PORT GPS_INSTANCES
 Environment=WINEDEBUG=-all
-Environment=WINEARCH=win32
-Environment=DISPLAY=:1
 WorkingDirectory=/var/www/mohh-gps
 ExecStart=/var/www/mohh-gps/start_gps_instances.sh
 StandardOutput=append:/var/log/mohh-gps/mohz.log
